# emlearn-micropython

./: .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  LICENSE.md  Makefile  README.md  airquality_check.py  airquality_download.py  bench.sh  index.html  micropython.cmake  micropython.mk  notes.md  paper.bib  prepare_california.py  requirements.dev.txt  requirements.txt  spectrofood_download.py  test_california_sklearn.py  test_cmsis_iir.c  test_trees.py  xor_model.csv
examples/har_trees/: README.md  basic.py  color_setup.py  compute_features.py  display.py  har_data2labelstudio.py  har_labelstudio2dataset.py  har_live.py  har_quicklabel.py  har_record.py  har_run.py  har_screen.py  har_train.py  har_uci.testdata.npz  har_uci_trees.csv  load.py  npyfile.py  package.json  pamap2_windows.npy  plotting.py  pyproject.toml  read_data.py  recorder.py  requirements.txt  screen.py  test_recorder.py  timebased.py  uci_har.meta.json  uci_har.testdata.npz  uci_har.trees.csv  windower.py
examples/har_trees/data/configurations/: cgestures.yaml  har_exercise1.yaml  pamap2.yaml  uci_har.yaml
examples/har_trees/data/processed/: cgestures.parquet  har_exercise_1.parquet
examples/har_trees/data/raw/cgestures/har_record/: 2025-06-15T192744_snake.npy  2025-06-15T192748_snake.npy  2025-06-15T192752_snake.npy  2025-06-15T192759_snake.npy  2025-06-15T192803_snake.npy  2025-06-15T192807_snake.npy  2025-06-15T192823_updown.npy  2025-06-15T192827_updown.npy  2025-06-15T192831_updown.npy  2025-06-15T192835_updown.npy  (+14 more)
examples/har_trees/labeling/: har_classify_config.xml
(+650 files in other folders)
